<resources>
    <string name="app_name">Assignment_5</string>
    <string name="nick">Nick Name</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="year">Year</string>
    <string name="latLong">Latitude Longitude</string>
    <string name="hintNick">Enter Nick Name</string>
    <string name="hintPassword">Enter Password</string>
    <string name="hintCountry">Enter Country</string>
    <string name="hintState">Enter State</string>
    <string name="hintCity">Enter City</string>
    <string name="hintYear">Enter Year</string>
    <string name="hintLatLong">Click to set Lat/Long</string>
    <string name="register">Register</string>
    <string name="registerButtonString">Register Me</string>
    <string name="title_activity_maps">Map</string>
    <string name="setLatLong">Set Lat_Long</string>
    <string name="title_activity_display_users">DisplayUsers</string>
    <string name="next_page">next page</string>
    <string name="users_list">Users List</string>
    <string name="users_on_map">Users on Map</string>
    <string name="title_activity_users_on_maps">Map</string>
    <string name="enter_country_filter">Enter Country Filter</string>
    <string name="enter_year_filter">Enter Year Filter</string>
    <string name="enter_state_filter">Enter State Filter</string>
    <string name="filter">Filter</string>
    <string name="title_activity_primary_main">PrimaryMainActivity</string>
    <string name="assignment_5">Assignment #5</string>
    <string name="welcome_to_the_string_app_name_choose_an_option_below">Welcome to the @string/app_name. Choose an option below.</string>
    <string name="login">login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_time_user_register_here">First time user? Register here</string>
    <string name="button">Button</string>
    <string name="login_here">Login Here</string>
    <string name="delete_all">Delete All</string>
    <string name="previous_page">Previous Page</string>
    <string name="display">Display</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello</string>
</resources>
