<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yps.assignment_5.MainActivity">

    <TextView
        android:text="@string/nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nickTV"
        android:layout_below="@+id/registerTV"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/passwordTV"
        android:layout_below="@+id/nickTV"
        android:layout_alignLeft="@+id/nickTV"
        android:layout_alignStart="@+id/nickTV"
        android:layout_marginTop="20dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countryTV"
        android:layout_below="@+id/passwordTV"
        android:layout_alignLeft="@+id/passwordTV"
        android:layout_alignStart="@+id/passwordTV"
        android:layout_marginTop="20dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stateTV"
        android:layout_below="@+id/countryTV"
        android:layout_alignLeft="@+id/countryTV"
        android:layout_alignStart="@+id/countryTV"
        android:layout_marginTop="20dp"
        android:textSize="30sp" />


    <TextView
        android:text="@string/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cityTV"
        android:layout_below="@+id/stateTV"
        android:layout_alignLeft="@+id/stateTV"
        android:layout_alignStart="@+id/stateTV"
        android:layout_marginTop="20dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/yearTV"
        android:layout_below="@+id/cityTV"
        android:layout_alignLeft="@+id/cityTV"
        android:layout_alignStart="@+id/cityTV"
        android:layout_marginTop="20dp"
        android:textSize="30sp" />

    <TextView
        android:text="@string/latLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/latlongTV"
        android:layout_below="@+id/yearTV"
        android:layout_alignLeft="@+id/yearTV"
        android:layout_alignStart="@+id/yearTV"
        android:layout_marginTop="20dp"
        android:textSize="30sp" />


    <!---->
    <!--EDIT TEXT-->
    <!---->

    <!---->
    <!--Final Button-->
    <!---->

    <TextView
        android:visibility="invisible"
        android:text="@string/setLatLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="13dp"
        android:id="@+id/confirmSetLatLong" />

    <!--  android:layout_above="@+id/finalButton"
          android:layout_toRightOf="@+id/finalButton"
          android:layout_toEndOf="@+id/finalButton"-->

    <Button
        android:id="@+id/finalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registerButtonString"
        android:minHeight="60dp"
        android:minWidth="100dp"
        android:onClick="onRegisterClick"
        android:layout_marginBottom="96dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="40sp"
        android:id="@+id/registerTV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText

        android:id="@+id/nickET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hintNick"
        android:ems="10"
        android:textSize="30sp"
        android:layout_alignBaseline="@+id/nickTV"
        android:layout_alignBottom="@+id/nickTV"
        android:layout_alignStart="@+id/countryStateButton" />

    <EditText
        android:id="@+id/cityET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hintCity"
        android:ems="10"
        android:textSize="30sp"
        android:layout_alignTop="@+id/cityTV"
        android:layout_alignStart="@+id/countryStateButton" />

    <EditText
        android:id="@+id/yearET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintYear"
        android:inputType="number"
        android:textSize="30sp"
        android:layout_alignTop="@+id/yearTV"
        android:layout_alignStart="@+id/countryStateButton" />

    <Spinner
        android:id="@+id/countryListSpinner"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_alignTop="@+id/countryTV"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/passwordET" />

    <Spinner
        android:id="@+id/stateListSpinner"
        android:layout_width="350sp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_alignTop="@+id/stateTV"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/cityET" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hintPassword"
        android:ems="10"
        android:textSize="30sp"
        android:layout_alignTop="@+id/passwordTV"
        android:layout_alignStart="@+id/nickET" />

    <Button
        android:id="@+id/countryStateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hintLatLong"
        android:minHeight="0dp"
        android:minWidth="50dp"
        android:onClick="onSetLatLongClick"
        android:textSize="30sp"
        android:layout_alignTop="@+id/latlongTV"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
