<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yps.assignment_5.MainActivity">


    <Button
    android:text="@string/next_page"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
        android:id="@+id/nextPage"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/users_on_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:id="@+id/usersOnMapButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:text="@string/users_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userListTV"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="34sp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/enter_year_filter"
        android:ems="10"
        android:id="@+id/yearFilterET1"
        android:layout_alignBaseline="@+id/stateFilterET1"
        android:layout_alignBottom="@+id/stateFilterET1"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_state_filter"
        android:ems="10"
        android:id="@+id/stateFilterET1"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/userListTV"
        android:layout_toEndOf="@+id/countryFilterET1" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_country_filter"
        android:ems="10"
        android:id="@+id/countryFilterET1"
        android:layout_alignBaseline="@+id/yearFilterET1"
        android:layout_alignBottom="@+id/yearFilterET1"
        android:layout_toEndOf="@+id/yearFilterET1" />

    <Button
        android:text="@string/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filterButton1"
        android:layout_marginRight="10dp"
        android:layout_above="@+id/tableLayout"
        android:layout_toEndOf="@+id/stateFilterET1" />

    <Button
        android:text="@string/previous_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previousPage"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/nextPage"
        android:layout_marginEnd="21dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context=".MainActivity"
        android:layout_above="@+id/nextPage"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:padding="5dp"
        android:orientation="vertical"
        android:layout_height="300dp"
        android:layout_below="@+id/yearFilterET1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp">
    </TableLayout>

    <Button
        android:text="@string/delete_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteButton"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/filterButton1"
        android:layout_marginEnd="24dp" />

    <Button
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/deleteButton"
        android:layout_toEndOf="@+id/deleteButton"
        android:id="@+id/logoutButton"
        android:onClick="onLogoutClick_DisplayUserList"/>

    <Button
        android:text="@string/display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayButton"
        android:layout_alignBottom="@+id/userListTV"
        android:layout_toStartOf="@+id/userListTV"
        android:layout_marginEnd="26dp" />

    <TextView
        android:text="@string/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/usersOnMapButton"
        android:layout_marginTop="11dp"
        android:id="@+id/welcomeTV" />
</RelativeLayout>