<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_primary_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.yps.assignment_5.PrimaryMainActivity">

    <TextView
        android:text="@string/assignment_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/appNameTV"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/welcome_to_the_string_app_name_choose_an_option_below"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appNameTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="112dp"
        android:id="@+id/welcomeTV"
        android:textSize="@dimen/place_autocomplete_progress_size" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:layout_alignBaseline="@+id/registerButton_login"
        android:layout_alignBottom="@+id/registerButton_login"
        android:layout_alignEnd="@+id/appNameTV"
        android:onClick="onLoginClick"
        />

    <Button
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="146dp"
        android:id="@+id/registerButton_login"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/appNameTV"
        android:onClick="onRegistrationClick"
        />
</RelativeLayout>
