<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map"
    android:layout_below="@+id/countryFilterET"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yps.assignment_5.UsersOnMapsActivity" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_year_filter"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/yearFilterET" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_country_filter"
        android:ems="10"
        android:id="@+id/countryFilterET"
        android:layout_below="@+id/yearFilterET"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/enter_state_filter"
        android:ems="10"
        android:layout_alignRight="@+id/yearFilterET"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/stateFilterET"
        android:layout_toRightOf="@+id/yearFilterET"
        android:layout_toEndOf="@+id/yearFilterET" />

    <Button
        android:text="@string/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filterButton"
        android:layout_alignBaseline="@+id/countryFilterET"
        android:layout_alignBottom="@+id/countryFilterET"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loadingPB"
        android:layout_marginBottom="36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>